PUBDEV-1612: Orc parser.  Orc parser is built like th Avro parser built by Michal M.  The two parsers are built using the current parser infrastructure built by Tomas N.  Due to the strange configuration of the Orc file with information needed to parse the whole file found at the end of the file instead of the beginning, Tomas has changed the parser framework to accomodate this.  In addition, orc file parsing does not use the normal chunking method either.  Orc parser chunking is done per stripe as designed by Tomas.  We currently do not support multi-file parsing, parsing use user metadata.
Big update of ORC parsing from Tomas N:

In order to make ORC parse work distributed and for hdfs I made following changes:

1. guessSetup takes the whole file - it is needed to read metadata stored at the end of file.
2.  The file is used as is, from Hdfs or local drive/nfs (no more copying the data to local disk)
3. input file is chunked so that the number of chunks matches exactly number of stripes in the orc file - then we can easily parse the data using ORC libraries from hadoop (each parse task simply parses it's own stripe - no need to read data ourselves or manipulates the raw bytes directly.
4. When specifying columns we want to read ,w e need to flatten non-primitive data types (orc expects them to be flattened in pre-order tree walk).

--- a/scripts/saveTableAsOrc.textile
+++ b/scripts/saveTableAsOrc.textile
@@ -1,8 +1,8 @@
 set hive.execution.engine=mr;
 set mapreduce.map.memory.mb=5240;
 set mapreduce.reduce.memory.mb=5240;
-set mapreduce.map.java.opts=-DAMYWANG_MAP=1 -Xmx4G -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+PrintGCDetails -XX:+PrintGCTimeStamps;
-set mapreduce.reduce.java.opts=-DAMYWANG_REDUCE=1 -Xmx4G -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+PrintGCDetails -XX:+PrintGCTimeStamps;
+set mapreduce.map.java.opts=-DAMYWANG_MAP=1 -Xmx4G -XX:PermSize=256m -XX:MaxPermSize=256m -XX:PrintGCDetails -XX:PrintGCTimeStamps;
+set mapreduce.reduce.java.opts=-DAMYWANG_REDUCE=1 -Xmx4G -XX:PermSize=256m -XX:MaxPermSize=256m -XX:PrintGCDetails -XX:PrintGCTimeStamps;
 create table airlines_all_05p(
 Year INT,
 Month INT,
@@ -37,9 +37,9 @@ IsArrDelayed STRING,
 IsDepDelayed STRING
 )
 ROW FORMAT DELIMITED
-FIELDS TERMINATED BY ','
-location '/apps/hive/warehouse/data/airlines_all_05p';
-load data inpath 'hdfs://mr-0xd6.0xdata.loc:8020/user/amy/airlines_all.05p.csv' into table airlines_all_05p;
+FIELDS TERMINATED BY ‘,’
+location ‘/apps/hive/warehouse/data/airlines_all_05p’;
+load data inpath ‘hdfs://mr-0xd6.0xdata.loc:8020/user/amy/airlines_all.05p.csv’ into table airlines_all_05p;
 create table orc_airlines_all_05p(
 Year INT,
 Month INT,
@@ -74,7 +74,7 @@ IsArrDelayed STRING,
 IsDepDelayed STRING
 )
 ROW FORMAT DELIMITED
-FIELDS TERMINATED BY ','
+FIELDS TERMINATED BY ‘,’
 STORED AS ORC;
 INSERT OVERWRITE TABLE orc_airlines_all_05p select * from airlines_all_05p;
 
@@ -82,7 +82,7 @@ The following is from Nidhi:
 CREATE EXTERNAL TABLE ta (a1 INT, a2 STRING, a3 STRING, a4 STRING, a5 INT, a6 STRING, a7 INT, a8 INT, a9 INT)
 STORED AS ORC;
 
-LOAD DATA local INPATH '/home/wendy/demo-11-zlib.orc' OVERWRITE INTO TABLE ta;
+LOAD DATA local INPATH ‘/home/wendy/demo-11-zlib.orc’ OVERWRITE INTO TABLE ta;
 ​
 select * from ta limit 3;
 #OK
@@ -91,9 +91,9 @@ select * from ta limit 3;
 #3	M	S	Primary	500	Good	0	0	0
 ​
 CREATE EXTERNAL TABLE aa (a1 INT, a2 STRING, a3 STRING, a4 STRING, a5 INT, a6 STRING, a7 INT, a8 INT, a9 INT)
-ROW FORMAT DELIMITED FIELDS TERMINATED BY  ','
+ROW FORMAT DELIMITED FIELDS TERMINATED BY ‘,’
 STORED AS TEXTFILE
-LOCATION '/user/wendy/from_hive';
+LOCATION ‘/user/wendy/from_hive’;
 ​
 select * from aa limit 3;
 #OK
@@ -103,26 +103,25 @@ select * from aa limit 3;
 ​
 INSERT OVERWRITE TABLE aa SELECT * FROM ta;
 ​
- select * from aa limit 3;
+select * from aa limit 3;
 #OK
 #1	M	M	Primary	500	Good	0	0	0
 #2	F	M	Primary	500	Good	0	0	0
 #3	M	S	Primary	500	Good	0	0	0
 #Time taken: 0.079 seconds, Fetched: 3 row(s)
 
-
 Convert csv to orc:
 CREATE EXTERNAL TABLE da (a1 INT, a2 INT, a3 INT, a4 INT, a5 INT, a6 INT, a7 DOUBLE, a8 DOUBLE, a9 INT)
- ROW FORMAT DELIMITED FIELDS TERMINATED BY  ','
- STORED AS TEXTFILE;
-LOAD DATA local INPATH '/home/nidhi/prostate.csv' OVERWRITE INTO TABLE bb;
+ROW FORMAT DELIMITED FIELDS TERMINATED BY ‘,’
+STORED AS TEXTFILE;
+LOAD DATA local INPATH ‘/home/nidhi/prostate.csv’ OVERWRITE INTO TABLE bb;
 ​
 select * from da limit 3;
 ​
 ​
 CREATE EXTERNAL TABLE bb (a1 INT, a2 INT, a3 INT, a4 INT, a5 INT, a6 INT, a7 DOUBLE, a8 DOUBLE, a9 INT)
 STORED AS ORC
-LOCATION '/user/nidhi/from_hive_prna';
+LOCATION ‘/user/nidhi/from_hive_prna’;
 
 INSERT OVERWRITE TABLE bb
 SELECT *
@@ -130,8 +129,7 @@ FROM da;
 ​
 select * from bb limit 3;
 
-
-# create table for milsongs
+create table for milsongs
 create external table milsongs (
 c1 INT,
 c2 DOUBLE,
@@ -224,5 +222,3 @@ c88 DOUBLE,
 c89 DOUBLE,
 c90 DOUBLE,
 c91 DOUBLE)
-
-
